@@ -4,7 +4,7 @@
 
   <groupId>io.chestnut-tree</groupId>
   <artifactId>chestnut-core</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>chestnut-core</name>
@@ -17,7 +17,7 @@
 
   <dependencies>
   
-  <dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.26</version>
@@ -45,11 +45,11 @@
 		    <version>2.12.0</version>
 		</dependency>
 		
-<dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.8.6</version>
-</dependency>
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.6</version>
+	</dependency>
 
 	<dependency>
 	    <groupId>io.netty</groupId>
@@ -58,17 +58,17 @@
 	</dependency>
 	
 
-<dependency>
-    <groupId>org.mongodb</groupId>
-    <artifactId>mongo-java-driver</artifactId>
-    <version>3.11.0</version>
-</dependency>
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongo-java-driver</artifactId>
+		<version>3.11.0</version>
+	</dependency>
 
-<dependency>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpclient</artifactId>
-    <version>4.5.9</version>
-</dependency>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.5.9</version>
+	</dependency>
 
 
     <dependency>
@@ -109,33 +109,26 @@
 					<target>${sdkVersion}</target>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
-						<arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 
 				<dependencies>
 				</dependencies>
-			</plugin>
+			</plugin>	
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-							<overWriteIfNewer>true</overWriteIfNewer>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-source-plugin</artifactId>
+			<version>3.0.0</version>
+			<executions>
+				<execution>
+					<phase>compile</phase>
+					<goals>
+						<goal>jar-no-fork</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
 
 
 		</plugins>
